# StockPredictor

./: MasterSPY.csv  Testing1.csv  data.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py  test1.csv  test120.csv  test15.csv  test1D.csv  test1x.csv  test1xxxxx.csv  test1xxxxxxx.csv  test1yyyy.csv  test30.csv  test60.csv
