[tool.poetry]
name = "stockpredictor"
version = "0.1.0"
description = ""
authors = ["hegerjl12 <jared.heger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
streamlit = "^1.26.0"
matplotlib = "^3.7.3"
deta = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
